--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <body>
     <button onclick="alert('Welcome to 30DaysOfJavaScript!');">Click Me</button>
     <button onclick="myFunction()">Try it</button>
+    <button onclick="yourFunction()">Circle</button>
+    <button onclick="akpFunction()">Today</button>
+    <button onclick="mikFunction()">Number</button>
     <!-- JavaScript external link could be in the header or in the body --> 
     <!-- Before the closing tag of the body is the recommended place to put the external JavaScript script -->
     <script src="introduction.js"></script>
