--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- JavaScript external link could be in the header or in the body --> 
     <!-- Before the closing tag of the body is the recommended place to put the external JavaScript script -->
     <script src="introduction.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
     <script src="variable.js"></script>
     <script src="helloworld.js"></script>
   </body>
